# ITI_Embedded_AVR_Interfacing_CMake

./: README.md
app/DIO_Apps/Sevene_Seg_Test/: 7segtest.c  7segtest.h  CMakeLists.txt
app/DIO_Apps/Task1/: CMakeLists.txt  Task1.c  Task1.h
app/DIO_Apps/Task2/: CMakeLists.txt  Task2.c  Task2.h
app/DIO_Apps/Task3/: CMakeLists.txt  Task3.c  Task3.h
app/LED_Apps/TEST_DRIVER/: CMakeLists.txt  Test.c  Test.h
app/PORT_Apps/TEST_DRIVER/: CMakeLists.txt  Test.c
app/SEVENSEG_Apps/TEST_DRIVER/: CMakeLists.txt  Test.c  Test.h
components/HAL/: CMakeLists.txt
components/HAL/HKPD/inc/: KPD_CFG.h  KPD_INTERFACING.h
components/HAL/HKPD/src/: KPD.c  KPD_CFG.c
components/HAL/HLCD/inc/: LCD_CFG.h  LCD_INTERFACING.h
components/HAL/HLCD/src/: LCD.c  LCD_CFG.c
components/HAL/HLED/inc/: LED_CFG.h  LED_INTERFACING.h
components/HAL/HLED/src/: LED.c  LED_CFG.c
components/HAL/HSEVENSEG/inc/: SEVENSEG_CFG.h  SEVENSEG_INTERFACING.h
components/HAL/HSEVENSEG/src/: SEVENSEG.c  SEVENSEG_CFG.c
components/HAL/HSWITCH/inc/: SWITCH_CFG.h  SWITCH_INTERFACING.h
components/HAL/HSWITCH/src/: SWITCH.c  SWITCH_CFG.c
components/MCAL/MDIO/: CMakeLists.txt
components/MCAL/MDIO/inc/: DIO_CFG.h  DIO_INTERFACING.h
components/MCAL/MDIO/src/: DIO.c  DIO_CFG.c
components/MCAL/MEXTI/: CMakeLists.txt
components/MCAL/MEXTI/inc/: EXTI_CFG.h  EXTI_INTERFACING.h
components/MCAL/MEXTI/src/: EXTI.c  EXTI_CFG.c
components/MCAL/MGIE/: CMakeLists.txt
components/MCAL/MGIE/inc/: GIE_INTERFACING.h  GIE_PRIV.h
components/MCAL/MGIE/src/: GIE.c
components/MCAL/MPORT/: CMakeLists.txt
components/MCAL/MPORT/inc/: PORT_CFG.h  PORT_INTERFACING.h
components/MCAL/MPORT/src/: PORT.c  PORT_CFG.c
components/common/: BIT_MATH.h  STD_TYPES.h
